# deeplab_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: freiburg_rgbd.yaml
launch/: freiburg.launch
nodes/: deeplab_ros_node.py
rviz/: deeplab_ros.rviz
src/deeplab_ros/: deeplab.py
